k8s/pgadmin4/Service.yaml
apiVersion: v1
kind: Service
metadata:
 name: pgadmin
spec:
 ports:
 - protocol: TCP
   port: 80
   targetPort: http
 selector:
   app: pgadmin
 type: ClusterIP
